--- a/app/views/projects/edit.html.haml
+++ b/app/views/projects/edit.html.haml
@@ -4,4 +4,4 @@
 
 = link_to 'Show', [@user, @project]
 \|
-= link_to 'Back', user_projects_path(@user)
+= link_to 'Index', user_projects_path(@user)
