--- a/app/views/entries/show.html.haml
+++ b/app/views/entries/show.html.haml
@@ -26,4 +26,4 @@
 \|
 = link_to 'Destroy', [@user, @activity, @entry], :confirm => 'Are you sure?', :method => :delete
 \|
-= link_to 'Activity Show', user_activity_path(@user, @activity)
+= link_to 'Back to Activity', user_activity_path(@user, @activity)
