--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -9,6 +9,13 @@
   = format_date @day
   = link_to 'Change Date', change_date_user_path(@user)
 
+%p
+  Score for this week:
+  = @user.score_for
+  %br
+  Score for last week:
+  = link_to "last week", user_path(@user, :date_change=>{:date=>@user.get_digest_dates(session[:day], "last_week")})
+  = @user.score_for(Date.today, "last_week")
 
 = render :partial => (true ? "digest" : "show_summary"), :locals => {:from_date=>@from_date, :through_date=>@through_date}
     
