adding bootstrap to make it look better

--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -1,14 +1,15 @@
-- if user_signed_in?
-  %li
-    = link_to("#{current_user.name}'s Home", user_path(current_user.id))
-  %li
-    = link_to('Logout', destroy_user_session_path, :method=>'delete')
-  %li
-    = link_to('Edit account', edit_user_registration_path)
-- else
-  %li
-    = link_to('Home', root_path)
-  %li
-    = link_to('Login', new_user_session_path)
-  %li
-    = link_to('Sign up', new_user_registration_path)
+%ul.nav  
+  - if user_signed_in?
+    %li
+      = link_to("#{current_user.name}'s Home", user_path(current_user.id), :class => 'brand')
+    %li
+      = link_to('Logout', destroy_user_session_path, :method=>'delete')
+    %li
+      = link_to('Edit account', edit_user_registration_path)
+  - else
+    %li
+      = link_to('Home', root_path, :class => 'brand')
+    %li
+      = link_to('Login', new_user_session_path)
+    %li
+      = link_to('Sign up', new_user_registration_path)
