--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,17 +1,25 @@
 !!!
 %html
   %head
-    %title
-      =page_title
-			
-    = stylesheet_link_tag    'application'
-    = javascript_include_tag 'application'
+    %meta{:charset => "utf-8"}
+    %meta{:name => "viewport", :content => "width=device-width, initial-scale=1, maximum-scale=1"}
+    %title= content_for?(:title) ? yield(:title) : "Timetraq"
+    %meta{:content => "", :name => "description"}
+    %meta{:content => "", :name => "author"}
+    = stylesheet_link_tag "application", :media => "all"
+    = javascript_include_tag "application"
     = csrf_meta_tags
-    = yield :head
-  
+    = yield(:head)
   %body
-    %ul.hmenu
-      = render 'shared/navigation'
-    - flash.each do |name, msg|
-      = content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String)
-    = yield
+    %header.navbar.navbar-fixed-top
+      %nav.navbar-inner
+        .container
+          = render 'shared/navigation'
+    #main{:role => "main"}
+      .container
+        .content
+          .row
+            .span12
+              = render 'layouts/messages'
+              = yield
+          %footer
