add guest user for testing functionality

--- a/app/views/goals/index.html.haml
+++ b/app/views/goals/index.html.haml
@@ -1,10 +1,7 @@
 %b
   goals
   
-%ul
-  - @goals.each do |goal|
-    %li
-      = link_to goal.name, [goal.user, goal]
+= render :partial => "list_goals", :locals=>{:goals=>@goals}
 
 %br
 
