--- a/app/views/goals/show.html.haml
+++ b/app/views/goals/show.html.haml
@@ -4,7 +4,7 @@
   %b Name:
   = @goal.name
 
-- if !@goal.summary.blank?
+- if !@goal.notes.blank?
   %p
     %b Additional notes:
     = @goal.notes
