--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,33 +4,20 @@
   %b
     = "#{@user.name} (#{@user.email})"
 
-%p
-  Summary for
-  = format_date @day
-  = link_to 'Change Date', change_date_user_path(@user)
+- if @user.projects.empty?
+  %p= link_to "Start a new project", new_user_project_path(@user)
+- else
+  %p Projects
+  = render :partial => 'projects/list_projects', :locals=>{:projects => @user.projects}
+  
+- if @user.goals.non_project.empty?
+  %p= link_to "Create a personal goal", new_user_goal_path(@user)
+- else
+  %p Personal Goals
+  = render :partial => "goals/list_goals", :locals=>{:goals=>@user.goals.non_project}
 
-%p
-  Score for this week:
-  = @user.score_for(session[:day])
-  %br
-  Score for
-  = link_to "last week:", user_path(@user, :date_change=>{:date=>session[:day] - 1.week})
-  = @user.score_for(session[:day], "last_week")
-  - if session[:day].to_date != Date.today
-    %br
-    = link_to "Back to today", user_path(@user, :date_change=>{:date=>Date.today})
-    
-= render :partial => (false ? "digest" : "show_summary"), :locals => {:from_date=>@from_date, :through_date=>@through_date}
-
-= render :partial => "log_activity", :locals => {:user=>@user}
-
-= link_to 'Activities', user_activities_path(@user)
-\|
 = link_to 'Individual Goals', user_goals_path(@user)
 \|
 = link_to 'Projects', user_projects_path(@user)
 \|
 = link_to 'Tags', user_tags_path(@user)
-\|
-= link_to 'Destroy User', @user, :confirm => 'Are you sure?', :method => :delete
-
