make project date fields smaller

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,4 +3,5 @@
 %p Manage your time and projects better
 
 %p
+  = button_to "Log In", new_user_session_path
   = button_to "Enter as guest", home_guest_path
