--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -30,6 +30,6 @@
 = link_to 'Back', user_projects_path(@user)
 - unless @project.started_on.blank?
   \|
-  = link_to 'Add project goal', new_user_project_goal_path(@user, @project)
+  = link_to 'Add an objective', new_user_project_goal_path(@user, @project)
 \|
 = link_to 'Destroy', [@user, @project], :confirm => 'Are you sure?', :method => :delete
