--- a/app/views/goals/_form.html.haml
+++ b/app/views/goals/_form.html.haml
@@ -11,14 +11,14 @@
     = f.text_field :name
     = f.hidden_field :project_id
   .field
-    = f.label "Additional notes:"
-  = f.text_area :notes, :size=>"50x10"
+    = f.label "Notes:"
+    = f.text_field :notes, :class=>"span4"
   .field
     - if !@goal.project_id.blank?
-      = f.label "Goal type: Project"
+      = f.label "Objective type: Project"
       = f.hidden_field :goal_type
     - else
-      = f.label "Goal type: "
+      = f.label "Objective type: "
       = f.radio_button(:goal_type, "one-time")
       One-time
       = f.radio_button(:goal_type, "recurring")
@@ -50,21 +50,22 @@
       Every
       = f.text_field :goal_frequency, {:maxlength=>3, :size=>3}
       = select :frequency, :other_frequency_unit, [["days",1], ["weeks",2], ["months",3]]
-  .field
-    = f.label "Set goal by score or amount of time spent on activities"
-    %p
-    = radio_button_tag :goal_amount, :score, !@goal.goal_amount_score.blank?
-    Score: 
-    = f.text_field :goal_amount_score, {:maxlength=>3, :size=>3}
-    %p
-    = radio_button_tag :goal_amount, :duration, !@goal.goal_amount_duration.blank?
-    Duration: 
-    = f.text_field :goal_amount_duration, {:maxlength=>3, :size=>3}
-    = f.select :goal_amount_unit, ["", "minutes", "hours", "days"]
+  = unless @goal.new_record?
+    .field
+      = f.label "Set goal by score or amount of time spent on activities"
+      %p
+      = radio_button_tag :goal_amount, :score, !@goal.goal_amount_score.blank?
+      Score: 
+      = f.text_field :goal_amount_score, {:maxlength=>3, :size=>3}
+      %p
+      = radio_button_tag :goal_amount, :duration, !@goal.goal_amount_duration.blank?
+      Duration: 
+      = f.text_field :goal_amount_duration, {:maxlength=>3, :size=>3}
+      = f.select :goal_amount_unit, ["", "minutes", "hours", "days"]
   - if params[:completed] == "true"
     .field
       %p
-        Goal completed
+        Objective completed
         = f.check_box :completed_ind
       .completed_on
         %p
