--- a/app/views/goals/index.html.haml
+++ b/app/views/goals/index.html.haml
@@ -1,10 +1,10 @@
 %b
-  goals
+  objectives
   
 = render :partial => "list_goals", :locals=>{:goals=>@goals}
 
 %br
 
-= link_to 'New Goal', new_user_goal_path(@user)
+= link_to 'New Objective', new_user_goal_path(@user)
 \|
 = link_to 'Back to User', user_path(@user)
