--- a/app/views/tags/_form.html.haml
+++ b/app/views/tags/_form.html.haml
@@ -11,6 +11,6 @@
     = f.text_field :description
   .field
     = f.label "Score (optional, 1 = positive, -1 = not positive, 0 = neutral)"
-    = f.select :classification, [[-1, -1],[0,0],[1,1]]
+    = f.select :classification, [[-1, -1],[0,0],[1,1]], {}, :class=>"span1"
   .actions
     = f.submit 'Save'
