--- a/app/views/tags/index.html.haml
+++ b/app/views/tags/index.html.haml
@@ -2,7 +2,7 @@
 
 %ul
   - @tags.each do |tag|
-    = link_to tag.description, [@user, tag]
+    %li= link_to tag.description, [@user, tag]
 
 %br
 
