--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -33,13 +33,13 @@ Tags:
     
     = f.submit 'Tag'
     
-- unless @applied_tags.blank? 
-  = form_for :tag, :url => user_activity_path(@user, @activity), :method => :put do |f|
-    Remove tag
-    = hidden_field_tag :untag, 'true'
-    = collection_select :tag, :id, @applied_tags, :id, :description
-    
-    = f.submit 'UnTag'
+/- unless @applied_tags.blank? 
+/  = form_for :tag, :url => user_activity_path(@user, @activity), :method => :put do |f|
+/    Remove tag
+/    = hidden_field_tag :untag, 'true'
+/    = collection_select :tag, :id, @applied_tags, :id, :description
+/    
+/    = f.submit 'UnTag'
 %p
 = link_to 'Home', user_path(@user)
 \|
