--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,8 @@
   box-shadow: 0 1px 2px rgba(0,0,0,.15);
 }
 
-.display_notes {
-  font-size: 10px;
-}
+.display_notes {font-size: 10px;}
+
+.big_letter_field {font-size: 20px;}
+
+.smaller_text {font-size: 11px;}
