--- a/app/views/home/index2.haml
+++ b/app/views/home/index2.haml
@@ -1,4 +1,7 @@
-%h1 How Much is your Time Worth?
+%h1 Timetraq
+%h4 Manage your projects
+%h4 Find resources
+%h4 Get it done!
 
 %p Track your time, make the best use of it.
 
