--- a/app/views/users/_old_show.html.haml
+++ b/app/views/users/_old_show.html.haml
@@ -20,7 +20,7 @@
     %br
     = link_to "Back to today", user_path(@user, :date_change=>{:date=>Date.today})
     
-= render :partial => (false ? "digest" : "show_summary"), :locals => {:from_date=>@from_date, :through_date=>@through_date}
+= render :partial => (true ? "digest" : "show_summary"), :locals => {:from_date=>@from_date, :through_date=>@through_date}
 
 = render :partial => "log_activity", :locals => {:user=>@user}
 
