probably broke a lot of code, but need to save work.

--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -11,13 +11,22 @@
     = f.text_field :name
   .field
     = f.label "Starting:"
+    = radio_button_tag :starting, :today, @project.started_on.blank?
+    Today
     %br
-    = radio_button_tag :starting, :pending, @project.started_on.blank?
+    = radio_button_tag :starting, :pending
     Not yet
     %br
     = radio_button_tag :starting, :set_date, !@project.started_on.blank?
     = f.date_select :started_on, {}, :class=>"span1"
-  - unless @project.started_on.blank?  
+  .field
+    = f.label "Set project as:"
+    = f.radio_button :viewable, 'private'
+    Private
+    = f.radio_button :viewable, 'public'
+    Publicly viewable
+  %br
+  - unless true 
     .field
       = f.label :target_completion_date
       = f.date_select :target_completion_date, {}, :class=>"span1"
