--- a/app/views/goals/show.html.haml
+++ b/app/views/goals/show.html.haml
@@ -71,7 +71,7 @@
       = link_to 'Find resources'
     %li
       Create an 
-      = link_to 'activity', new_user_activity_path(@user, :goal_id=>@goal.id)
+      = link_to 'assignment', new_user_assignment_path(@user, :goal_id=>@goal.id)
       tied to your objective.
 
 = link_to 'Home', user_path(@user)
