--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -23,3 +23,5 @@
 = link_to 'New Project', new_user_project_path(@user)
 \|
 = link_to 'Tags', user_tags_path(@user)
+\|
+= link_to 'Contacts', user_contacts_path(@user)
