--- a/app/views/activities/_form.html.haml
+++ b/app/views/activities/_form.html.haml
@@ -9,6 +9,9 @@
   .field
     = f.label :description
     = f.text_field :description
+  .field
+    Disable Entries
+    = f.check_box :disable_entries
   = hidden_field_tag :goal_id, params[:goal_id]
   .actions
     = f.submit 'Save'
